--- a/public/game_pagina/style.css
+++ b/public/game_pagina/style.css
@@ -7,7 +7,7 @@ height: 100vh;
 background: linear-gradient(#365b6d, #289dd2);
 background-size: cover;
 background-repeat: repeat;
-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+font-family: 'Audiowide', 'Geo', 'Orbitron', 'Roboto', sans-serif;
 }
 
 
@@ -46,7 +46,7 @@ color: white;
   position: absolute;
   right: 10%;
   top: 5%;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  font-family: 'Audiowide', 'Geo', 'Orbitron', 'Roboto', sans-serif;
 }
 
 @media screen and (max-width: 480px) {
@@ -57,26 +57,27 @@ color: white;
 
 #msgBox {
   text-align: center;
-  padding-right: 20%;
-  padding-top:10%;
+  margin-right: 100px;
+  margin-top:300px;
   font-size: 3.5em;
-  font-family: 'Arial', sans-serif;
-  margin: 0.1em 0em;
+  font-family: 'Audiowide', 'Geo', 'Orbitron', 'Roboto', sans-serif;
   position: absolute;
   right: 10%;
   top: 5%;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: white;
+  width: 425px;
 }
 
 #smallMsg {
-  text-align: right;
-  padding-right: 15%;
-  padding-top: 15%;
-  font-size: 1.1em;
-  position: absolute;
-  right: 10%;
-  top: 10%;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+ font-size: 1.1em;
+  display: block;
+  font-family: 'Audiowide', 'Geo', 'Orbitron', 'Roboto', sans-serif;
+  color: white;
+  text-align: center;
+  width: 30%;
+  margin-left: 200px;
+  margin-top: 30px;
+  opacity: 0.4;
 }
 
 @media screen and (max-width: 480px) {
@@ -91,13 +92,16 @@ margin: 10px auto;
 display: block;
 border-radius: 15px;
 height: 30px;
-margin-left: 22%;
+margin-left: 18%;
 text-align: center;
-background-color: rgb(76, 122, 133);
 color: white;
 transition: background-color 0.3s ease, opacity 0.3s ease, transform 0.4s ease, color 0.3s ease;
-border: none;
+border: 1px solid #f2f1ec;
 box-shadow: 0 0 10px 0px #140f41;
+background-color: rgba(255, 255, 255, 0.3);
+font-weight: bold;
+font-size: 20px;
+margin-top: 30px;
 }
 
 #guess:hover {
@@ -116,9 +120,9 @@ transform 0.4s ease;
 
 #container {
 margin: auto;
-width: 29em;
+width: 30em;
 margin-left: 10%;
-margin-top: 5cap;
+margin-top: 2cap;
 padding-top: 8%;
 margin-left: 13%;
 }
@@ -132,7 +136,7 @@ background: #d3ac42;
 }
 
 .default {
-background: #2b99cb;
+background: #41c1ba;
 }
 
 .square {
@@ -143,16 +147,18 @@ display: inline-flex;
 height: 1.5em;
 width: 1.5em;
 font-size: 3.7em;
-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+font-family: 'Audiowide', 'Geo', 'Orbitron', 'Roboto', sans-serif;
 box-shadow: 0 0 5px 0px #140f41;
 vertical-align: middle;
 justify-content: center;
 align-items: center;
+border: 2px solid #f2f1ec
+transition: transform 0.3s ease;
 }
 
 .square:hover {
   opacity: 0.9;
-  transform: scale(1.01);
-  transition: background-color 0.3s ease, opacity 0.3s ease, transform 0.1s ease, color 0.3s ease;
+  transform: scale(105%);
+  transition: background-color 0.3s ease, opacity 0.3s ease, transform 0.3s ease, color 0.3s ease;
   cursor: arrow;
 }
