--- a/public/stylesheets/style_game.css
+++ b/public/stylesheets/style_game.css
@@ -109,6 +109,8 @@ top: 5%;
 margin-top: 27%;
 margin-right: 6.5%;
 background: linear-gradient(#289dd2, #365b6d);
+-webkit-filter: drop-shadow(0px 5px 5px #41c1ba);
+filter: drop-shadow(0px 5px 15px #41c1ba);
 }
 
 #guess:hover {
@@ -164,6 +166,8 @@ justify-content: center;
 align-items: center;
 border: 1px solid #f2f1ec;
 transition: transform 0.3s ease;
+-webkit-filter: drop-shadow(0px 5px 5px #41c1ba);
+filter: drop-shadow(0px 5px 5px #41c1ba);
 }
 
 .square:hover {
