--- a/public/stylesheets/style_game.css
+++ b/public/stylesheets/style_game.css
@@ -182,3 +182,5 @@ filter: drop-shadow(0px 5px 5px #41c1ba);
   -webkit-filter: drop-shadow(0px 5px 5px #41c1ba);
   filter: drop-shadow(0px 5px 30px #41c1ba);
 }
+
+/* test */
