Lingo woordtypanimatie toegevoegd

--- a/public/stylesheets/style_game.css
+++ b/public/stylesheets/style_game.css
@@ -148,6 +148,10 @@ background: #d3ac42;
 background: #41c1ba;
 }
 
+.wrongword {
+  background: red;
+}
+
 .square {
 vertical-align:top;
 margin-top: 4px;
