--- a/public/stylesheets/style_game.css
+++ b/public/stylesheets/style_game.css
@@ -129,7 +129,7 @@ transform: 0.4s ease;
 
 #container {
 margin: auto;
-width: 30em;
+width: 40em;
 margin-left: 10%;
 margin-top: 2cap;
 padding-top: 8%;
@@ -155,6 +155,7 @@ background: #41c1ba;
 .square {
 vertical-align:top;
 margin-top: 4px;
+margin-left: 4px;
 border-radius: 5px;
 display: inline-flex;
 height: 1.5em;
