--- a/public/stylesheets/style_game.css
+++ b/public/stylesheets/style_game.css
@@ -8,7 +8,10 @@ background: linear-gradient(#365b6d, #289dd2);
 background-size: cover;
 background-repeat: repeat;
 font-family: 'Audiowide', 'Geo', 'Orbitron', 'Roboto', sans-serif;
+align-items: center;
+justify-content: center;
 }
+
 
 
 .invisible {
@@ -41,19 +44,6 @@ button:hover {
   color: white;
   }
 
-#msgBox {
-  text-align: center;
-  margin-right: 20%;
-  margin-top:10%;
-  font-size: 3.5em;
-  font-family: 'Arial', sans-serif;
-  margin: 0.1em 0em;
-  position: absolute;
-  right: 10%;
-  top: 5%;
-  font-family: 'Audiowide', 'Geo', 'Orbitron', 'Roboto', sans-serif;
-}
-
 @media screen and (max-width: 480px) {
 #msgBox {
   font-size: 2.5em;
@@ -62,13 +52,11 @@ button:hover {
 
 #msgBox {
   text-align: center;
-  margin-right: 100px;
-  margin-top:150px;
   font-size: 3.5em;
   font-family: 'Audiowide', 'Geo', 'Orbitron', 'Roboto', sans-serif;
   position: absolute;
-  right: 10%;
-  top: 5%;
+  right: 16%;
+  top: 0%;
   color: white;
   width: 425px;
 }
@@ -104,10 +92,8 @@ font-family: 'Audiowide', 'Geo', 'Orbitron', 'Roboto', sans-serif;;
 padding: 5px;
 height: 100px;
 position: absolute;
-right: 10%;
-top: 5%;
-margin-top: 27%;
-margin-right: 6.5%;
+right: 19.5%;
+top: 26%;
 background: linear-gradient(#289dd2, #365b6d);
 -webkit-filter: drop-shadow(0px 5px 5px #41c1ba);
 filter: drop-shadow(0px 5px 15px #41c1ba);
@@ -188,6 +174,15 @@ filter: drop-shadow(0px 5px 5px #41c1ba);
   width: 250px;
   -webkit-filter: drop-shadow(0px 5px 5px #41c1ba);
   filter: drop-shadow(0px 5px 30px #41c1ba);
+}
+
+.uitleg {
+  position: absolute;
+  bottom: 17%;
+  right: 13%;
+  height: 300px;
+  width: 500px;
+  background-color: aquamarine;
 }
 
 /* test */
