--- a/public/stylesheets/style_game.css
+++ b/public/stylesheets/style_game.css
@@ -25,7 +25,7 @@ display: block;
 
 button {
 position: absolute;
-left: 28.8%;
+left: 25.8%;
 top: 47.8%;
 background: #41c1ba;
 height: 7%;
@@ -115,9 +115,10 @@ font-size: 20px;
 font-family: 'Audiowide', 'Geo', 'Orbitron', 'Roboto', sans-serif;;
 padding: 5px;
 width: 50%;
+max-width: 330px;
 aspect-ratio: 1 / 0.3;
 position: absolute;
-top: 30%;
+top: 25%;
 left: 15%;
 background: linear-gradient(#289dd2, #365b6d);
 -webkit-filter: drop-shadow(0px 5px 5px #41c1ba);
@@ -211,10 +212,11 @@ filter: drop-shadow(0px 5px 5px #41c1ba);
 .uitleg {
   overflow-y: scroll;
   position: absolute;
-  top: 58%;
-  left: -300%;
-  max-height: 40%;
+  top: 51%;
+  left: 15%;
   width: 80%;
+  aspect-ratio: 1 / 0.5;
+  max-width: 450px;
   border: 1px solid white;
   box-shadow: 0 0 10px 0px #140f41;
 }
@@ -248,7 +250,7 @@ filter: drop-shadow(0px 5px 5px #41c1ba);
 .hintknop {
   padding-top: 1.5%;
   position: absolute;
-  top: 49%;
+  top: 42%;
   left: 300%;
   text-align: center;
   width: 10%;
@@ -262,7 +264,7 @@ filter: drop-shadow(0px 5px 5px #41c1ba);
 }
 
 .hintknop.active {
-  left: 35%;
+  left: 32%;
 }
 
 .rood {
