--- a/public/stylesheets/User.css
+++ b/public/stylesheets/User.css
@@ -39,6 +39,7 @@ body {
     left: -2%;
     bottom: 48%;
     position: relative;
+    
     }
 
 #user {
@@ -53,6 +54,8 @@ body {
     overflow-y: hidden;
     text-align: center;
     border-radius: 10px;
+    font-family: 'Audiowide', 'Geo', 'Orbitron', 'Roboto', sans-serif;
+    font-size: 20px;
 } 
 
 #user::placeholder {
@@ -80,6 +83,8 @@ body {
     overflow-y: hidden;
     text-align: center;
     border-radius: 10px;
+    font-family: 'Audiowide', 'Geo', 'Orbitron', 'Roboto', sans-serif;
+    font-size: 20px
 }
 
 #pw::placeholder {
