--- a/public/stylesheets/User.css
+++ b/public/stylesheets/User.css
@@ -117,6 +117,7 @@ textarea::-webkit-scrollbar-track {
 }
 
 .playbutton {
+
     height: 150px;
     width: 150px;
     border-radius: 50%;
@@ -127,6 +128,7 @@ textarea::-webkit-scrollbar-track {
     left: 85%;
     text-align: center;
     justify-content: center;
+    text-decoration: none;
 }
 
 #playtext {
